2011-03-02  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/2.xml, opt/Postscript-PageSize.xml: Added custom page size
	to the PageSize option of many drivers. Most printers are capable
	of taking arbitrary page sizes and in addition, we cannot be sure
	that we have enumerated all possible page sizes for all printers.
	(Ubuntu bug #726397).

2011-02-15  Olaf Meeuwissen <olaf.meeuwissen@avasys.jp>
	* db/source/printer/Epson-LP-S210.xml,
	db/source/printer/Epson-LP-S8100.xml,
	db/source/driver/eplaser-jp.xml, db/source/opt/2.xml,
	db/source/opt/eplaser-MediaType.xml,
	db/source/opt/eplaser-jp-Model.xml: Added two new EPSON laser
	printers.

2011-02-01  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
	* db/source/printer/Epson-E-150.xml,
         db/source/printer/Epson-E-200.xml,
         db/source/printer/Epson-E-300.xml,
         db/source/printer/Epson-E-330S.xml,
         db/source/printer/Epson-E-500.xml,
         db/source/printer/Epson-E-520.xml,
         db/source/printer/Epson-E-600.xml,
         db/source/printer/Epson-E-700.xml,
         db/source/printer/Epson-E-720.xml,
         db/source/printer/Epson-E-800.xml,
         db/source/printer/Epson-E-810.xml,
         db/source/printer/Epson-ME_200.xml,
         db/source/printer/Epson-PictureMate_500.xml,
         db/source/printer/Epson-PictureMate_Express.xml,
         db/source/printer/Epson-PictureMate_PM_200.xml,
         db/source/printer/Epson-PictureMate_PM_210.xml,
         db/source/printer/Epson-PictureMate_PM_225.xml,
         db/source/printer/Epson-PictureMate_PM_235.xml,
         db/source/printer/Epson-PictureMate_PM_240.xml,
         db/source/printer/Epson-PictureMate_PM_250.xml,
         db/source/printer/Epson-PictureMate_PM_260.xml,
         db/source/printer/Epson-PictureMate_PM_270.xml,
         db/source/printer/Epson-PictureMate_PM_280.xml,
         db/source/printer/Epson-PictureMate_PM_290.xml,
         db/source/printer/Epson-PictureMate_PM_300.xml,