@@ -1,0 +1,50 @@
+<driver id="driver/rastertosag-gdi">
+  <name>rastertosag-gdi</name>
+  <url>http://www.openprinting.org/download/printing/rastertosag-gdi/</url>
+  <supplier>rastertosag-gdi project</supplier>
+  <thirdpartysupplied />
+  <license>GPL</license>
+  <supportcontacts>
+    <supportcontact url="http://forums.linux-foundation.org/list.php?30" level="voluntary">Ricoh and OEM Forum on OpenPrinting</supportcontact>
+  </supportcontacts>
+  <shortdescription>
+    <en>
+    Free software printer driver for the SAG-GDI protocol on Ricoh lasers
+    </en>
+  </shortdescription>
+  <functionality>
+    <maxresx>600</maxresx>
+    <maxresy>600</maxresy>
+    <monochrome />
+    <text>100</text>
+    <lineart>100</lineart>
+    <graphics>50</graphics>
+    <photo>50</photo>
+  </functionality>
+  <execution>
+    <cups />
+  </execution>
+  <comments>
+    <en>
+
+    This is a simple CUPS Raster driver (written in Python) to generate the
+    proprietary &lt;a
+    href="http://www.undocprint.org/formats/page_description_languages/sagem-gdi"&gt;SAG-GDI&lt;/a&gt;
+    raster format from Sagem Communication which is used by some
+    l;aser printers from Ricoh, currently the Aficio SP1000s and
+    SP1100s. These printers do not understand PCL or PostScript and
+    atre therefore no covered by Ricoh's PPD files.&lt;p&gt;
+
+    Note that this driver is not supplied by Ricoh.&lt;p&gt;
+
+    </en>
+  </comments>
+  <printers>
+    <printer>
+      <id>printer/Ricoh-Aficio_SP1000s</id>
+    </printer>
+    <printer>
+      <id>printer/Ricoh-Aficio_SP1100s</id>
+    </printer>
+  </printers>
+</driver>
