@@ -1,0 +1,47 @@
+<printer id="printer/Ricoh-Aficio_SP1000s">
+  <make>Ricoh</make>
+  <model>Aficio SP1000s</model>
+  <mechanism>
+    <laser />
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.ricoh.com</url>
+  <lang>
+    <proprietary />
+    <pjl />
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:MFPrinter ;MDL:Laser Pro LL;CMD:AUTOMATIC,PJL,GDI_RL;DES:MFPrinter Laser Pro LL;CLS:PRINTER;VER:v1.03e ;NS:L507124L8090042;</ieee1284>
+      <make>MFPrinter </make>
+      <model>Laser Pro LL</model>
+      <description>MFPrinter Laser Pro LL</description>
+      <commandset>AUTOMATIC,PJL,GDI_RL</commandset>
+    </general>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>rastertosag-gdi</driver>
+  <drivers>
+    <driver>
+      <id>rastertosag-gdi</id>
+    </driver>
+  </drivers>
+  <comments>
+    <en>
+
+      This is one of the few Ricoh laser printers which neither
+      understands PostScript nor PCL. It uses the proprietary &lt;a
+      href="http://www.undocprint.org/formats/page_description_languages/sagem-gdi"&gt;SAG-GDI&lt;/a&gt;
+      raster format from Sagem Communication.&lt;p&gt;
+
+      The "rastertosag-gdi" driver for this format is a simple CUPS filter
+      written in Python, which you can download from this site.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
