@@ -1,3 +1,11 @@
+2011-03-23  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Ricoh-Aficio_SP1000s.xml, printer/Ricoh-Aficio_SP1100s.xml,
+	driver/rastertosag-gdi.xml: Added the new "rastertosag-gdi" driver
+	and the printers which use it: Ricoh Aficio SP1000s and SP1100s
+	(Ubuntu bug #700141,
+	http://forums.linux-foundation.org/read.php?30,13489,13581).
+
 2011-03-02  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* opt/2.xml, opt/Postscript-PageSize.xml: Added custom page size
